--- a/Numerical Python_Numpy.ipynb
+++ b/Numerical Python_Numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,6 +740,652 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sum : ndarray의 element들 간의 합을 구함\n",
+    "test_array = np.arange(1, 11)\n",
+    "test_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_array.sum(dtype=np.float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8],\n",
+       "       [ 9, 10, 11, 12]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# axis : 모든 operation function을 실행할 때, 기준이 되는 dimension축\n",
+    "test_array = np.arange(1, 13).reshape(3, 4)\n",
+    "test_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([10, 26, 42]), array([15, 18, 21, 24]))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_array.sum(axis=1), test_array.sum(axis=0) # axis : 차원? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8],\n",
+       "       [ 9, 10, 11, 12]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# mean & std : ndarray의 element들 간의 평균 또는 표준 편차를 반환\n",
+    "test_array = np.arange(1, 13).reshape(3,4)\n",
+    "test_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6.5, array([5., 6., 7., 8.]))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_array.mean(), test_array.mean(axis=0) # mean : 평균"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.452052529534663, array([3.26598632, 3.26598632, 3.26598632, 3.26598632]))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_array.std(), test_array.std(axis=0) # std : 표준편차"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [2, 3, 4]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# concatenate : numpy array를 합치는 함수\n",
+    "# vstack : 행으로 합침\n",
+    "# hstack : 열로 합침\n",
+    "a = np.array([1,2,3])\n",
+    "b = np.array([2,3,4])\n",
+    "np.vstack((a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [2, 3],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[1],[2],[3]])\n",
+    "b = np.array([[2],[3],[4]])\n",
+    "np.hstack((a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [2, 3, 4]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# concatenate : axis를 기준으로 합침\n",
+    "a = np.array([[1,2,3]])\n",
+    "b = np.array([[2,3,4]])\n",
+    "np.concatenate((a,b), axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1,   4,   9,  16],\n",
+       "       [ 25,  36,  49,  64],\n",
+       "       [ 81, 100, 121, 144]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# element-wist operations : array간 shape이 같을 때 일어나는 연산\n",
+    "matrix_a = np.arange(1,13).reshape(3,4)\n",
+    "matrix_a * matrix_a # shape이 같으면 같은 위치에 있는 것 끼리 곱함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 58,  64],\n",
+       "       [139, 154]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dot product : 일반적인 행렬 곱\n",
+    "test_a = np.arange(1,7).reshape(2,3)\n",
+    "test_b = np.arange(7,13).reshape(3,2)\n",
+    "test_a.dot(test_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4., 5., 6.],\n",
+       "       [7., 8., 9.]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# broadcasting : shape이 다른 배열 간 연산을 지원하는 기능\n",
+    "test_matrix = np.array([[1,2,3],[4,5,6]], float)\n",
+    "scalar = 3\n",
+    "test_matrix + scalar # 모든 원소에 scalar값을 더해줌"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# all & any : array의 데이터 전부 / 일부 가 조건에 만족 여부 반환\n",
+    "a = np.arange(10)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, False)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.any(a>5), np.any(a<0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, True)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all(a>5), np.all(a<10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# logical_and : and조건이 모두 만족할때(논리 곱)\n",
+    "a = np.array([1,3,0],float)\n",
+    "np.logical_and(a>0,a<3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False,  True, False])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# logical_not : false일때 참\n",
+    "b = np.array([True, False, True], bool)\n",
+    "np.logical_not(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 3, 2])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# where : 조건에 만족하는 인덱스값을 반환\n",
+    "np.where(a>0, 3, 2) # a > 0의 조건이 만족할 경우, 3반환 / 아니면 2 반환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1], dtype=int64),)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(a>0) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 0)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# argmax & argmin : 최대 / 최소 인덱스 값 반환\n",
+    "a = np.array([1,2,4,5,8,78,23,3])\n",
+    "np.argmax(a), np.argmin(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([3, 1, 1], dtype=int64), array([0, 0, 2, 2], dtype=int64))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[1,2,4,7],[9,88,6,45],[9,76,3,4]])\n",
+    "np.argmax(a, axis=1), np.argmin(a, axis=0) # axis축을 기준으로 찾기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False,  True, False, False, False,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# boolean index\n",
+    "test_array = np.array([1,4,0,2,3,8,9,7], float)\n",
+    "test_array > 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4., 8., 9., 7.])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_array[test_array > 3] # 조건에 만족되는 것만 반환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1, 1, 0, 1, 1, 1, 1],\n",
+       "       [1, 1, 1, 0, 0, 0, 1, 1, 1],\n",
+       "       [1, 1, 1, 0, 1, 0, 1, 1, 1],\n",
+       "       [1, 1, 0, 0, 1, 0, 0, 1, 1],\n",
+       "       [1, 1, 0, 1, 1, 1, 0, 1, 1],\n",
+       "       [1, 0, 0, 1, 1, 1, 0, 0, 1],\n",
+       "       [1, 0, 1, 1, 1, 1, 1, 0, 1],\n",
+       "       [1, 0, 1, 1, 1, 1, 1, 0, 1],\n",
+       "       [1, 0, 1, 1, 1, 1, 1, 0, 1],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [1, 0, 1, 1, 1, 1, 1, 0, 1],\n",
+       "       [1, 0, 1, 1, 1, 1, 1, 0, 1],\n",
+       "       [1, 0, 1, 1, 1, 1, 1, 0, 1],\n",
+       "       [1, 0, 1, 1, 1, 1, 1, 0, 1],\n",
+       "       [1, 0, 1, 1, 1, 1, 1, 0, 1]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([\n",
+    "[12, 13, 14, 12, 16, 14, 11, 10,  9],\n",
+    "[11, 14, 12, 15, 15, 16, 10, 12, 11],\n",
+    "[10, 12, 12, 15, 14, 16, 10, 12, 12],\n",
+    "[ 9, 11, 16, 15, 14, 16, 15, 12, 10],\n",
+    "[12, 11, 16, 14, 10, 12, 16, 12, 13],\n",
+    "[10, 15, 16, 14, 14, 14, 16, 15, 12],\n",
+    "[13, 17, 14, 10, 14, 11, 14, 15, 10],\n",
+    "[10, 16, 12, 14, 11, 12, 14, 18, 11],\n",
+    "[10, 19, 12, 14, 11, 12, 14, 18, 10],\n",
+    "[14, 22, 17, 19, 16, 17, 18, 17, 13],\n",
+    "[10, 16, 12, 14, 11, 12, 14, 18, 11],\n",
+    "[10, 16, 12, 14, 11, 12, 14, 18, 11],\n",
+    "[10, 19, 12, 14, 11, 12, 14, 18, 10],\n",
+    "[14, 22, 12, 14, 11, 12, 14, 17, 13],\n",
+    "[10, 16, 12, 14, 11, 12, 14, 18, 11]])\n",
+    "B = A < 15\n",
+    "B.astype(np.int) # true, false를 1, 0으로 바꿔서 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2., 2., 4., 8., 6., 4.])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fancy index : numpy는 array를 index value로 사용해서 값을 추출하는 방법\n",
+    "a = np.array([2,4,6,8], float)\n",
+    "b = np.array([0,0,1,3,2,1], int) # index값 / 반드시 int형으로 선언\n",
+    "a[b] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2., 2., 4., 8., 6., 4.])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# take : bracket index와 같은 효과\n",
+    "a.take(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.,  4., 16., 16.,  4.])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[1,4],[9,16]], float)\n",
+    "b = np.array([0,0,1,1,0], int)\n",
+    "c = np.array([0,1,1,1,1], int)\n",
+    "a[b,c] # b와 c를 열로 묶어서 ex)0행 0열 추출"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -762,7 +1408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
