--- a/fashion_MNIST.ipynb
+++ b/fashion_MNIST.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,31 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
-      "32768/29515 [=================================] - 0s 0us/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
-      "26427392/26421880 [==============================] - 0s 0us/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
-      "8192/5148 [===============================================] - 0s 0s/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
-      "4423680/4422102 [==============================] - 0s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +61,7 @@
        "(60000, 28, 28)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +81,7 @@
        "array([9, 0, 0, ..., 3, 0, 5], dtype=uint8)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -204,51 +189,122 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1875/1875 [==============================] - 1s 547us/step - loss: 0.0338 - accuracy: 0.9876\n",
+      "1875/1875 [==============================] - 1s 564us/step - loss: 0.2288 - accuracy: 0.9146\n",
       "Epoch 2/5\n",
-      "1875/1875 [==============================] - 1s 548us/step - loss: 0.0388 - accuracy: 0.9860\n",
+      "1875/1875 [==============================] - 1s 568us/step - loss: 0.2215 - accuracy: 0.9165\n",
       "Epoch 3/5\n",
-      "1875/1875 [==============================] - 1s 546us/step - loss: 0.0344 - accuracy: 0.9881\n",
+      "1875/1875 [==============================] - 1s 563us/step - loss: 0.2141 - accuracy: 0.9198\n",
       "Epoch 4/5\n",
-      "1875/1875 [==============================] - 1s 546us/step - loss: 0.0333 - accuracy: 0.9875\n",
+      "1875/1875 [==============================] - 1s 557us/step - loss: 0.2098 - accuracy: 0.9216\n",
       "Epoch 5/5\n",
-      "1875/1875 [==============================] - 1s 544us/step - loss: 0.0315 - accuracy: 0.9886\n"
+      "1875/1875 [==============================] - 1s 562us/step - loss: 0.2027 - accuracy: 0.9232\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1dd7d2f2100>"
+       "<tensorflow.python.keras.callbacks.History at 0x2a4a5da8a30>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(train_images, train_labels, epochs=100, verbose=0)\n",
+    "model.fit(train_images, train_labels, epochs=10, verbose=0)\n",
     "model.fit(train_images, train_labels, epochs=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 - 0s - loss: 1.0238 - accuracy: 0.8836\n",
+      "313/313 - 0s - loss: 0.3440 - accuracy: 0.8875\n",
       "\n",
-      "테스트 정확도 :  0.8835999965667725\n"
+      "테스트 정확도 :  0.887499988079071\n"
      ]
     }
    ],
    "source": [
     "test_loss, test_acc = model.evaluate(test_images, test_labels, verbose=2)\n",
     "print('\\n테스트 정확도 : ', test_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = model.predict(test_images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4.4815973e-08, 6.3542612e-15, 4.0382464e-10, 1.4272111e-13,\n",
+       "       8.7269228e-08, 1.1393229e-03, 7.5438802e-09, 4.6640551e-03,\n",
+       "       2.8623551e-10, 9.9419641e-01], dtype=float32)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argmax(predictions[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_labels[0]"
    ]
   },
   {
