--- a/1_housing.ipynb
+++ b/1_housing.ipynb
@@ -2183,6 +2183,245 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=RandomForestRegressor(),\n",
+       "             param_grid=[{'max_features': [2, 4, 6, 8],\n",
+       "                          'n_estimators': [3, 10, 30]},\n",
+       "                         {'bootstrap': [False], 'max_features': [2, 3, 4],\n",
+       "                          'n_estimators': [3, 10]}],\n",
+       "             return_train_score=True, scoring='neg_mean_squared_error')"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = [\n",
+    "    {'n_estimators': [3, 10, 30], 'max_features': [2, 4, 6, 8]},\n",
+    "    {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]}\n",
+    "]\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "\n",
+    "grid_search = GridSearchCV(forest_reg, param_grid, cv=5,\n",
+    "                          scoring='neg_mean_squared_error',\n",
+    "                          return_train_score=True)\n",
+    "grid_search.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_features': 6, 'n_estimators': 30}"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(max_features=6, n_estimators=30)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64053.900420855425 {'max_features': 2, 'n_estimators': 3}\n",
+      "55329.15686787335 {'max_features': 2, 'n_estimators': 10}\n",
+      "53223.360907575225 {'max_features': 2, 'n_estimators': 30}\n",
+      "59803.36242335598 {'max_features': 4, 'n_estimators': 3}\n",
+      "53353.20254018114 {'max_features': 4, 'n_estimators': 10}\n",
+      "50719.54686784894 {'max_features': 4, 'n_estimators': 30}\n",
+      "59672.440568109865 {'max_features': 6, 'n_estimators': 3}\n",
+      "52153.6816281284 {'max_features': 6, 'n_estimators': 10}\n",
+      "49912.41852637728 {'max_features': 6, 'n_estimators': 30}\n",
+      "59148.83969934987 {'max_features': 8, 'n_estimators': 3}\n",
+      "52346.14538670258 {'max_features': 8, 'n_estimators': 10}\n",
+      "50023.26817506609 {'max_features': 8, 'n_estimators': 30}\n",
+      "63483.253166928094 {'bootstrap': False, 'max_features': 2, 'n_estimators': 3}\n",
+      "54372.92160481577 {'bootstrap': False, 'max_features': 2, 'n_estimators': 10}\n",
+      "59715.96548177445 {'bootstrap': False, 'max_features': 3, 'n_estimators': 3}\n",
+      "52109.78686820364 {'bootstrap': False, 'max_features': 3, 'n_estimators': 10}\n",
+      "58085.70273742757 {'bootstrap': False, 'max_features': 4, 'n_estimators': 3}\n",
+      "51913.36679374825 {'bootstrap': False, 'max_features': 4, 'n_estimators': 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cvres = grid_search.cv_results_\n",
+    "for mean_score, params in zip(cvres[\"mean_test_score\"], cvres[\"params\"]):\n",
+    "    print(np.sqrt(-mean_score), params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7.46144626e-02, 6.94112557e-02, 4.03424056e-02, 1.88771338e-02,\n",
+       "       1.66606814e-02, 1.84338486e-02, 1.55882508e-02, 3.20625578e-01,\n",
+       "       5.44381263e-02, 1.10127422e-01, 7.81693474e-02, 8.85104542e-03,\n",
+       "       1.66114314e-01, 7.74499188e-05, 3.58152744e-03, 4.08715149e-03])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_importances = grid_search.best_estimator_.feature_importances_\n",
+    "feature_importances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.3206255779280924, 'median_income'),\n",
+       " (0.16611431370769672, 'INLAND'),\n",
+       " (0.110127421976494, 'pop_per_hhold'),\n",
+       " (0.07816934735312069, 'bedrooms_per_romm'),\n",
+       " (0.0746144626237755, 'longitude'),\n",
+       " (0.0694112557301843, 'latitude'),\n",
+       " (0.05443812626214329, 'rooms_per_hhold'),\n",
+       " (0.04034240561054823, 'housing_median_age'),\n",
+       " (0.018877133813739944, 'total_rooms'),\n",
+       " (0.018433848596436438, 'population'),\n",
+       " (0.016660681359249904, 'total_bedrooms'),\n",
+       " (0.015588250773003976, 'households'),\n",
+       " (0.008851045418194927, '<1H OCEAN'),\n",
+       " (0.004087151488660608, 'NEAR OCEAN'),\n",
+       " (0.0035815274398498594, 'NEAR BAY'),\n",
+       " (7.744991880924263e-05, 'ISLAND')]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extra_attribs = [\"rooms_per_hhold\", \"pop_per_hhold\", \"bedrooms_per_romm\"]\n",
+    "cat_encoder = full_pipeline.named_transformers_[\"cat\"]\n",
+    "cat_one_hot_attribs = list(cat_encoder.categories_[0])\n",
+    "attributes = num_attribs + extra_attribs + cat_one_hot_attribs\n",
+    "sorted(zip(feature_importances, attributes), reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_model = grid_search.best_estimator_\n",
+    "\n",
+    "X_test = strat_test_set.drop(\"median_house_value\", axis=1)\n",
+    "y_test = strat_test_set[\"median_house_value\"].copy()\n",
+    "\n",
+    "X_test_prepared = full_pipeline.transform(X_test)\n",
+    "\n",
+    "final_predictions = final_model.predict(X_test_prepared)\n",
+    "\n",
+    "final_mse = mean_squared_error(y_test, final_predictions)\n",
+    "final_rmse = np.sqrt(final_mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47518.78559260047"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([45578.86556784, 49382.55746658])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy import stats\n",
+    "confidence = 0.95\n",
+    "squared_errors = (final_predictions - y_test) ** 2\n",
+    "np.sqrt(stats.t.interval(confidence, len(squared_errors) - 1,\n",
+    "                        loc=squared_errors.mean(),\n",
+    "                        scale=stats.sem(squared_errors)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
